# intersections

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  RustConfig  code.js  cy-style.json  data.json  diesel.toml  latest.dump  latest.dump.1  latest.dump.2  prepop.sql  test_data.json
database/: Cargo.toml
database/src/: lib.rs
databaseutils/: Cargo.toml
databaseutils/src/: lib.rs  main.rs
error_handler/: Cargo.toml
error_handler/src/: lib.rs
migrations/2020-09-30-200748_create_person/: down.sql  up.sql
migrations/2020-10-22-235134_add_fields/: down.sql  up.sql
migrations/2020-10-24-021330_prepopulate_nodes/: up.sql
migrations/2020-11-02-174605_trim_spaces/: down.sql  up.sql
migrations/2021-01-16-190212_add_communities/: down.sql  up.sql
migrations/2021-01-24-173641_users/: down.sql  up.sql
migrations/2021-04-01-220301_add_invitations/: down.sql  up.sql
migrations/2021-06-20-160706_person_count_experiences/: down.sql  up.sql
src/: database.rs  error_handler.rs  main.rs  schema.rs
src/handlers/: form_handlers.rs  graph_utilities.rs  graphs.rs  handlers.rs  mod.rs  node_handlers.rs  people_handlers.rs  routes.rs  user_handlers.rs
src/models/: community.rs  lens.rs  mod.rs  node.rs  person.rs  user.rs
templates/: 404.html  about.html  add_community.html  add_community_lens.html  add_lens_form.html  api_base.html  base.html  community_index.html  community_node.html  data_use.html  delete_community.html  delete_user.html  edit_community.html  email_person.html  email_verification.html  first_lens_form.html  full_graph.html  index.html  lens_form.html  log_in.html  network_graph.html  node.html  node_network_graph.html  old_add_lens_form.html  old_first_lens_form.html  person.html  register.html  survey_intro.html  user_index.html  user_page.html  users_index.html  view_community.html
templates/authentication/: change_password.html  email_verification.html  log_in.html  password_email_sent.html  register.html  registration_error.html  request_password_reset.html
templates/communities/: add_community.html  community_index.html  delete_community.html  edit_community.html  view_community.html
templates/emails/: email_community_invitation.html  email_person.html  email_verification copy.html  email_verification.html  password_reset_email.html
templates/errors/: 404.html  internal_server_error.html  not_authorized.html  not_found.html
templates/graphs/: community_node.html  network_graph.html  node_network_graph.html
templates/nodes/: community_node.html  node.html
templates/people/: delete_person.html  person.html
templates/survey/: add_experience_form.html  first_experience_form.html  first_lens_form.html  survey_intro.html
templates/users/: admin_edit_user.html  delete_user.html  edit_user.html  user_index.html  user_page.html
webapp/: Cargo.toml  diesel.toml  i18n.toml
webapp/i18n/en/: webapp.ftl
webapp/i18n/fr/: webapp.ftl
webapp/i18n/fr-CA/: webapp.ftl
webapp/migrations/2020-10-24-021330_prepopulate_nodes/: down.sql
webapp/migrations/2021-01-16-190212_add_communities/: up.sql
webapp/migrations/2021-01-24-173641_users/: up.sql
webapp/src/: lib.rs  main.rs  schema.rs
webapp/src/handlers/: api.rs  authentication_handlers.rs  base.rs  community.rs  community_handler.rs  email.rs  email_handlers.rs  errors.rs  form_handlers.rs  graph_utilities.rs  graphs.rs  handlers.rs  mod.rs  node_handlers.rs  nodes.rs  people.rs  people_handlers.rs  routes.rs  survey_handlers.rs  surveys.rs  user_handlers.rs  users.rs
webapp/src/models/: authentication.rs  community.rs  email.rs  experience.rs  graph.rs  lens.rs  mod.rs  node.rs  person.rs  phrase.rs  user.rs  verification.rs
