[package]
name = "intersections"
version = "0.1.0"
authors = ["ToferC <cgeist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.1.1"
actix-multipart = "0.3.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres", "extras", "uuid", "r2d2", "chrono"]}
diesel_migrations = "1.4.0"
bigdecimal = { version = "0.1.2", features = ["serde"] }
num-bigint = "0.2.6"
num = "*"
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
alcoholic_jwt = "1.0.0"
reqwest = { version = "0.10.6", features = ["json"] }
env_logger = "0.7.1"
bdays = "0.1.1"
csv = "1.1.3"
bytes = "0.5.4"
actix-files = "0.4.0"
tera = "1.5.0"
calamine = "0.16.1"
rand = "0.7.3"
lazy_static = "1.4"
uuid = "0.8.1"
petgraph = { version = "0.5.1", features = ["serde-1"] }
