
default-run = "webapp"

[workspace]
members = [
    "webapp",
    "database", 
    "databaseutils", 
    "error_handler",
]

default-members = ["webapp", "databaseutils"]

[[bin]]
name = "databaseutils"           # The name of the target.
path = "databaseutils/src/main.rs"    # The source file of the target.