[package]
name = "database"
version = "0.1.0"
authors = ["ToferC <cgeist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres", "extras", "uuid", "r2d2", "chrono", "uuidv07"]}
diesel_migrations = "1.4.0"
r2d2 = "0.8.8"
lazy_static = "1.4"

error_handler = { path = "../error_handler" }