[package]
name = "databaseutils"
version = "0.1.0"
authors = ["ToferC <cgeist7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webapp = { path = "../webapp" }
database = { path = "../database"}
error_handler = { path = "../error_handler" }
rand = "*"

tokio = { version = "0.2", features = ["full"] }
futures = "*"
dotenv = "0.15.0"
bigdecimal = { version = "0.4.3", features = ["serde"] }
num-bigint = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
Inflector = "0.5.1"

deepl-api = { git = "https://github.com/ToferC/deepl-api-rs.git", branch="master" }

[[bin]]
name = "databaseutils"
path = "src/main.rs"
