[package]
name = "error_handler"
version = "0.1.0"
authors = ["ToferC <cgeist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
diesel = { version = "1.4.2", features = ["postgres", "extras", "uuid", "r2d2", "chrono", "uuidv07"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "*"
actix-identity = "*"