[package]
name = "webapp"
version = "0.3.0"
authors = ["ToferC <cgeist7@gmail.com>"]
edition = "2021"
build = "build.rs"
default-run = "webapp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# actix and web
actix-web = "4.4.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-web-static-files = "3.0.1"
actix-rt = "1"
tokio = { version = "0.2", features = ["full"] }
actix-service = "2.0.2"
actix-multipart = "0.3.0"
actix-session = "0.4.0"
actix-identity = "0.6.0"
actix-files = "0.5.0"
tera = "1.5.0"
tera-text-filters = "1.0"
Inflector = "0.5.1"
env_logger = "0.8.2"

# database and data
diesel = { version = "2.1.4", features = ["postgres", "extras", "uuid", "r2d2", "chrono", "64-column-tables"]}
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
lazy_static = "1.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
derive_more = "0.99.8"
serde_json = "1.0.78"

# misc
bigdecimal = { version = "0.4.3", features = ["serde"] }
num-bigint = "0.4.4"
shrinkwraprs = "0.3.0"
qrcode-generator = "4.0.4"
regex = "1.4.5"

num = "*"
dotenv = "0.15.0"
futures = "0.3.1"
alcoholic_jwt = "1.0.0"
reqwest = { version = "0.10.6", features = ["json"] }
bdays = "0.1.1"
csv = "1.1.3"
bytes = "0.5.4"
calamine = "0.16.1"
rand = "0.7.3"

# localization
fluent-templates = { version = "*", features = ["tera"] }
deepl-api = { git = "https://github.com/ToferC/deepl-api-rs.git", branch="master" }

# graph crates
petgraph = { version = "0.5.1", features = ["serde-1"] }
rust-argon2 = "0.8"

# email
sendgrid = "0.17.0"

# local crates
database = { path = "../database"}
error_handler = { path = "../error_handler" }

[build-dependencies]
actix-web-static-files = "4.0"
static-files = "0.2.1"