[package]
name = "webapp"
version = "0.3.0"
authors = ["ToferC <cgeist7@gmail.com>"]
edition = "2021"
build = "build.rs"
default-run = "webapp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# actix and web
actix-web = "4"
actix-service = "2.0.2"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web-static-files = "4.0"
static-files = "0.2.1"

# database and data
diesel = { version = "2.1.4", features = ["postgres", "extras", "uuid", "r2d2", "chrono", "64-column-tables"]}
diesel_migrations = "2.1.0"
r2d2 = "0.8.9"
lazy_static = "1.4"
shrinkwraprs = "0.3"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"]}

dotenv = "0.15.0"
chrono = {version = "0.4.31", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
derive_more = "0.99.8"
serde_json = "1.0.78"
rust-argon2 = "1.0.0"
rand = "0.8.4"
regex = "1.5.5"
env_logger = "0.9.0"
strum = { version = "0.25", features = ["derive"] }

tokio = { version = "1.37.0", features = ["full"] }

# templating
tera = "1.19.1"
tera-text-filters = "1.0"
Inflector = "0.11.4"

# localization
fluent-templates = { version = "*", features = ["tera"] }
deepl-api = { git = "https://github.com/ToferC/deepl-api-rs.git", branch="master" }

# email
sendgrid = { version = "0.19.2", features = ["async"] }

# database and data
uuid = { version = "0.8.1", features = ["serde", "v4"] }

# misc
bigdecimal = { version = "0.4.3", features = ["serde"] }
num-bigint = "0.4.4"
qrcode-generator = "4.0.4"

num = "*"
futures = "0.3.1"
alcoholic_jwt = "1.0.0"
reqwest = { version = "0.10.6", features = ["json"] }
bdays = "0.1.1"
csv = "1.1.3"
bytes = "0.5.4"
calamine = "0.16.1"

# graph crates
petgraph = { version = "0.5.1", features = ["serde-1"] }

# local crates
database = { path = "../database"}
error_handler = { path = "../error_handler" }

[build-dependencies]
actix-web-static-files = "4.0"
static-files = "0.2.1"